Updated to version 6.2.0